# xynote

./: CMakeLists.txt  README.md  main.cpp  run.sh
forms/: sider.ui  xynote.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h  xynote.cpp  xynote.h
widgets/: sider.cpp  sider.h  xynote.cpp  xynote.h
